Macro/skim/logs/19545448_9.err
input_line_9:2:35: error: expected expression
 FlatMix(9*100000, (9+1)*100000-1,) /* '.x' tries to invoke a function with the same name as the macro */
                                  ^
